[gd_scene load_steps=5 format=2]

[ext_resource path="res://gfx/tower_base.png" type="Texture" id=1]
[ext_resource path="res://gfx/tower_cannon.png" type="Texture" id=2]
[ext_resource path="res://scripts/Tower.gd" type="Script" id=3]
[ext_resource path="res://sfx/shoot.wav" type="AudioStream" id=4]

[node name="Tower" type="Node2D"]
script = ExtResource( 3 )

[node name="sprBase" type="Sprite" parent="."]
modulate = Color( 0.101961, 0.109804, 0.12549, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="sprCannon" type="Sprite" parent="."]
modulate = Color( 0.101961, 0.109804, 0.12549, 1 )
position = Vector2( 0, -14 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="BulletRate" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Bullets" type="Node2D" parent="."]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 720.0
attenuation = 1.68179
